fix(jumping): fix content jumping

--- a/src/styled/customStyles.scss
+++ b/src/styled/customStyles.scss
@@ -118,7 +118,3 @@ $HEADER-HEIGHT: 4.125rem;
   position: relative;
   z-index: 10000;
 }
-
-html, body, #root {
-  min-height: 100vh;
-}
